Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -188,16 +188,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'croatia'"
+       "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
     "def favorite_destination():\n",
     "    travel_destinations = travel_destinations + travel_destinations['madagascar']\n",
     "    return travel_destinations\n",
-    "travel_destinations[-1] # 'madagascar'"
+    "travel_destinations # 'madagascar'"
    ]
   },
   {
