--- a/index.ipynb
+++ b/index.ipynb
@@ -203,9 +203,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    travel_destinations = travel_destinations + travel_destinations['madagascar']\n",
-    "    pass travel_destinations\n",
-    "travel_destinations # 'madagascar'"
+    "    \n",
+    "travel_destinations[-1] # 'madagascar'"
    ]
   },
   {
