--- a/index.ipynb
+++ b/index.ipynb
@@ -207,7 +207,7 @@
     "def favorite_destination():\n",
     "    return travel_destinations.append('madagascar')\n",
     "    \n",
-    "travel_destinations[-1] # 'madagascar'"
+    "travel_destinations[-] # 'madagascar'"
    ]
   },
   {
