--- a/index.ipynb
+++ b/index.ipynb
@@ -188,16 +188,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'croatia'"
+       "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
     "def favorite_destination():\n",
     "    return travel_destinations.append('madagascar')\n",
     "    \n",
-    "travel_destinations[-] # 'madagascar'"
+    "travel_destinations # 'madagascar'"
    ]
   },
   {
