--- a/index.ipynb
+++ b/index.ipynb
@@ -206,7 +206,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "    return travel_destinations.append('madagascar')\n",
-    "    \n",
+    "    print(travel_desi)\n",
     "travel_destinations # 'madagascar'"
    ]
   },
