--- a/index.ipynb
+++ b/index.ipynb
@@ -206,8 +206,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "    return travel_destinations.append('madagascar')\n",
-    "    print(travel_destinations)\n",
-    "travel_destinations # 'madagascar'"
+    "    print(travel_destinations)\n"
    ]
   },
   {
