--- a/index.ipynb
+++ b/index.ipynb
@@ -207,7 +207,8 @@
     "def favorite_destination():\n",
     "    travel_destinations.append('madagascar')\n",
     "    return travel_destinations\n",
-    "favorite_destination\n"
+    "favorite_destination\n",
+    "travel_destinations # 'madagascar'"
    ]
   },
   {
