--- a/index.ipynb
+++ b/index.ipynb
@@ -188,16 +188,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']"
+       "<function __main__.favorite_destination()>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,8 +207,7 @@
     "def favorite_destination():\n",
     "    travel_destinations.append('madagascar')\n",
     "    return travel_destinations[-1]\n",
-    "favorite_destination\n",
-    "travel_destinations # 'madagascar'"
+    "favorite_destination\n"
    ]
   },
   {
