--- a/index.ipynb
+++ b/index.ipynb
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "'madagascar'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,8 @@
     "def favorite_destination():\n",
     "    travel_destinations.append('madagascar')\n",
     "favorite_destination()\n",
-    "travel_destinations[-1] # 'madagascar'"
+    "travel_destinations[-1] # 'madagascar'\n",
+    "travel_desti"
    ]
   },
   {
