--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -225,8 +225,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    for index in range(0, len(travel_destinations):\n",
-    "                       print(i)"
+    "    for index in range(0, len(travel_destinations)\n",
+    "                       "
    ]
   },
   {
