--- a/index.ipynb
+++ b/index.ipynb
@@ -219,14 +219,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for index in range(0, len(travel_destinations)):\n",
-    "                       print(index)"
+    "                       print(index)\n",
+    "    return\n",
+    "capitalize_countries()"
    ]
   },
   {
