--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -219,45 +219,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for index in range(0, len(travel_destinations)):\n",
     "                       travel_destinations[index] = travel_destinations[index].capitalize()\n",
-    "    return travel_destinations\n",
+    "    return\n",
     "capitalize_countries()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "capitalize_countries() # ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
    ]
